fixeed the link

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ På motsvarande sätt kan dessa verktyg utnyttjas till <strong>strategiskt arbet
 <br />
 <br />
 <br />
-<a href="http://github.com/skallinen">Klicka här för källkoden till presentationen</a></p>
+<a href="https://github.com/skallinen/intro/tree/gh-pages">Klicka här för källkoden till presentationen</a></p>
 
 </div>
 <div id="slide-24" class="step " 
